edit btns -> add custom class

--- a/subjects/cs500/cs500.html
+++ b/subjects/cs500/cs500.html
@@ -84,36 +84,36 @@
                     <div class="row">
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/csLec1.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 1</button>
+                                <button type="button" class="btn w-100 py-3 mt-3  customBtnColor">Lecture 1</button>
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/csLec2.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 2</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 2</button>
                             </a>
                         </div>
                     </div>
                     <div class="row ">
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/csLec3.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 3</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 3</button>
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/csLec4.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 4</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 4</button>
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/csLec5.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 5</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 5</button>
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/csLec6.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 6</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 6</button>
                             </a>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                     <div class="row">
                         <div class="col-sm-12 col-lg-6">
                             <a href="sections/csSec1.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
                                     Section 1
                                     <br>
                                     Number Systems
@@ -151,7 +151,7 @@
                         </div>
                         <div class="col-sm-12 col-lg-6">
                             <a href="sections/csSec2.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
                                     Section 2
                                     <br>
                                     Number Systems P2 & Addition & Subtraction
@@ -162,7 +162,7 @@
                     <div class="row ">
                         <div class="col-sm-12 col-lg-6">
                             <a href="sections/csSec3.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
                                     Section 3
                                     <br>
                                     Signed Binary Numbers
@@ -171,7 +171,7 @@
                         </div>
                         <div class="col-sm-12 col-lg-6">
                             <a href="sections/csSec4.html">
-                                <button type="button" class="btn w-100 py-3 mt-3 ">
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
                                     Section 4 & 5
                                     <br>
                                     Excess Notation & Signed 2's complement
@@ -184,7 +184,7 @@
                     <!-- <div class="row">
                         <div class="col-sm-12 col-lg-6">
                             <a href="sections/csSec5.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
                                     Section 1
                                     <br>
 
@@ -193,7 +193,7 @@
                         </div>
                         <div class="col-sm-12 col-lg-6">
                             <a href="sections/csSec6.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
                                     Section 1
                                     <br>
 
