--- a/subjects/ms500/ms500.html
+++ b/subjects/ms500/ms500.html
@@ -83,36 +83,36 @@
                     <div class="row">
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/msLec1.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 1</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 1</button>
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/msLec2.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 2</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 2</button>
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/msLec3.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 3</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 3</button>
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/msLec4.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 4</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 4</button>
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/msLec5.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 5</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 5</button>
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
                             <a href="lectures/msLec6.html">
-                                <button type="button" class="btn w-100 py-3 mt-3">Lecture 6</button>
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 6</button>
                             </a>
                         </div>
                     </div>
