edit cs500 all sections btn

--- a/subjects/cs500/cs500.html
+++ b/subjects/cs500/cs500.html
@@ -132,7 +132,7 @@
                     <div class="row">
                         <a href="https://www.youtube.com/playlist?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g"
                             target="_blank">
-                            <button type="button" class="btn  w-100 py-3 mt-3 all_sections-btn">
+                            <button type="button" class="btn btn-info  w-100 py-3 mt-3 ">
                                 All Sections
                                 <br>
                                 2021/2022
