edit navbar paths

--- a/subjects/cs500/cs500.html
+++ b/subjects/cs500/cs500.html
@@ -127,7 +127,7 @@
                 <div class="section-header">
                     <h3 class="section-desc">Dr Maryam Sections</h3>
                 </div>
-
+                <!-- ========All sections Button ==================  -->
                 <div class="cs500-content_sections my-5">
                     <div class="row">
                         <a href="https://www.youtube.com/playlist?list=PL4-CdaRLyja6ErUwwvHldyZ1lrd-wMB_g"
@@ -138,6 +138,22 @@
                                 2021/2022
                             </button>
                         </a>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-6">
+                            <a href="sections/النظري.html">
+                                <button type="button" class="btn btn-success w-100 py-3 mt-3">
+                                    النظري
+                                </button>
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-lg-6">
+                            <a href="sections/">
+                                <button type="button" class="btn btn-success w-100 py-3 mt-3">
+                                    Sheets
+                                </button>
+                            </a>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12 col-lg-6">
@@ -170,7 +186,7 @@
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
-                            <a href="sections/csSec4.html">
+                            <a href="sections/csSec4&5.html">
                                 <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
                                     Section 4 & 5
                                     <br>
@@ -183,7 +199,7 @@
                     </div>
                     <!-- <div class="row">
                         <div class="col-sm-12 col-lg-6">
-                            <a href="sections/csSec5.html">
+                            <a href="sections/csSec6.html">
                                 <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
                                     Section 1
                                     <br>
@@ -192,7 +208,7 @@
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
-                            <a href="sections/csSec6.html">
+                            <a href="sections/csSec7.html">
                                 <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
                                     Section 1
                                     <br>
