--- a/subjects/cs500/sections/csSec6.html
+++ b/subjects/cs500/sections/csSec6.html
@@ -50,17 +50,17 @@
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="../cs500.html">CS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">OR500</a></li>
+                            <li><a class="dropdown-item" href="../../or500/or500.html">OR500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">AS500</a></li>
+                            <li><a class="dropdown-item" href="../../as500/as500.html">AS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">DB500</a></li>
+                            <li><a class="dropdown-item" href="../../db500/db500.html">DB500</a></li>
 
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link p-lg-3" aria-current="page"
-                            href="../../../index.html#diploma_schedule">Diploma
+                            href=".../../../index.html#diploma_schedule">Diploma
                             Schedule</a>
                     </li>
 
@@ -82,9 +82,15 @@
             <div class="container">
                 <div class="cs500-content pt-4">
                     <h2>PDF</h2>
-                    <a href="">
+                    <a href="" target="_blank">
                         <button type="button" class="btn btn-danger py-3">
                             Section 6 PDF
+                            <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
+                        </button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button type="button" class="btn btn-danger py-3 m-3">
+                            Section 4 Handwritten
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
                     </a>
@@ -93,12 +99,8 @@
 
 
 
+
                     </div>
-
-
-
-
-
                 </div>
             </div>
         </div>
