--- a/subjects/cs500/sections/csSec2.html
+++ b/subjects/cs500/sections/csSec2.html
@@ -50,11 +50,11 @@
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="../cs500.html">CS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">OR500</a></li>
+                            <li><a class="dropdown-item" href="../../or500/or500.html">OR500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">AS500</a></li>
+                            <li><a class="dropdown-item" href="../../as500/as500.html">AS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">DB500</a></li>
+                            <li><a class="dropdown-item" href="../../db500/db500.html">DB500</a></li>
 
                         </ul>
                     </li>
