--- a/subjects/cs500/cs500.html
+++ b/subjects/cs500/cs500.html
@@ -148,7 +148,7 @@
                             </a>
                         </div>
                         <div class="col-sm-12 col-lg-6">
-                            <a href="sections/">
+                            <a href="sections/sheets.html">
                                 <button type="button" class="btn btn-success w-100 py-3 mt-3">
                                     Sheets
                                 </button>
