edit ms500 lectures 4 / 5 / 6 paths

--- a/subjects/ms500/lectures/msLec5.html
+++ b/subjects/ms500/lectures/msLec5.html
@@ -59,7 +59,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="../../../index.html#diploma_schedule">Diploma
+                        <a class="nav-link p-lg-3" aria-current="page"
+                            href="../../../index.html#diploma_schedule">Diploma
                             Schedule</a>
                     </li>
 
@@ -90,7 +91,7 @@
                     </a>
                     <div class="row my-5">
                         <h2>Video</h2>
-                        <iframe src="https://drive.google.com/file/d/1MBRAmqdhN9iGPD8tnZqRTUVsf7Y2cEWr/preview"
+                        <iframe src="https://drive.google.com/file/d/1WLUXFCCEN1lExz2JE9XOzAwIEc9UP945/preview"
                             width="640" height="480" allow="autoplay" allowfullscreen></iframe>
                     </div>
 
