--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="subjects/cs500/cs500.html">CS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">OR500</a></li>
+                            <li><a class="dropdown-item" href="subjects/or500/or500.html">OR500</a></li>
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">AS500</a></li>
                             <hr class="dropdown-divider">
