--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="subjects/or500/or500.html">OR500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">AS500</a></li>
+                            <li><a class="dropdown-item" href="subjects/as500/as500.html">AS500</a></li>
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">DB500</a></li>
 
