edit navbar paths in ms - cs - or

--- a/subjects/cs500/cs500.html
+++ b/subjects/cs500/cs500.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar navbar-expand-lg sticky-top position-fixed w-100">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../../index.html">
                 <img src="../../imgs/FGSSR-LOGO.png" alt="">
                 <span class="ps-2">FGSSR</span>
             </a>
@@ -52,9 +52,9 @@
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">CS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">OR500</a></li>
+                            <li><a class="dropdown-item" href="../or500/or500.html">OR500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">AS500</a></li>
+                            <li><a class="dropdown-item" href="../as500/as500.html">AS500</a></li>
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">DB500</a></li>
 
