--- a/subjects/ms500/lectures/msLec5.html
+++ b/subjects/ms500/lectures/msLec5.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar navbar-expand-lg sticky-top position-fixed w-100">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../../../index.html">
                 <img src="../../../imgs/FGSSR-LOGO.png" alt="">
                 <span class="ps-2">FGSSR</span>
             </a>
@@ -50,11 +50,11 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="../ms500.html">MS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">CS500</a></li>
+                            <li><a class="dropdown-item" href="../../cs500/cs500.html">CS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">OR500</a></li>
+                            <li><a class="dropdown-item" href="../../or500/or500.html">OR500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">AS500</a></li>
+                            <li><a class="dropdown-item" href="../../as500/as500.html">AS500</a></li>
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">DB500</a></li>
 
