add DB500 Content

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="subjects/as500/as500.html">AS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">DB500</a></li>
+                            <li><a class="dropdown-item" href="subjects/db500/db500.html">DB500</a></li>
 
                         </ul>
                     </li>
