--- a/subjects/as500/lectures/asLec6.html
+++ b/subjects/as500/lectures/asLec6.html
@@ -20,7 +20,7 @@
     <!-- CSS File  -->
 
     <link rel="stylesheet" href="../../../css/style.css">
-    <title>FGSSR - OR500 - Lecture 6</title>
+    <title>FGSSR - AS500 - Lecture 6</title>
 </head>
 
 
@@ -52,11 +52,11 @@
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="../../cs500/cs500.html">CS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="../or500.html">OR500</a></li>
+                            <li><a class="dropdown-item" href="../../or500/or500.html">OR500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">AS500</a></li>
+                            <li><a class="dropdown-item" href="../as500.html">AS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">DB500</a></li>
+                            <li><a class="dropdown-item" href="../../db500/db500.html">DB500</a></li>
 
                         </ul>
                     </li>
@@ -76,14 +76,14 @@
     <section class="lecture-body">
         <div class="text-center">
             <div class="section-header">
-                <h2 class="section-title">Operations Research</h2>
+                <h2 class="section-title">Applied Statistics</h2>
                 <h3 class="section-desc">Lecture 6</h3>
             </div>
             <!-- 
             <div class="container">
-                <div class="or500-content pt-4">
+                <div class="as500-content pt-4">
                     <h2>PDF</h2>
-                    <a href="">
+                    <a href="" target="_blank">
                         <button type="button" class="btn btn-danger py-3">
                             Lecture 6 PDF
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
@@ -92,24 +92,6 @@
                     <div class="row my-5">
                         <h2>Video</h2>
 
-
-                        <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-
-                            <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-                                <path
-                                    d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                            </symbol>
-                        </svg>
-
-
-                        <div class="alert alert-warning d-flex align-items-center" role="alert">
-                            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
-                                <use xlink:href="#exclamation-triangle-fill" />
-                            </svg>
-                            <div>
-                                Not Recorded Yet
-                            </div>
-                        </div>
 
                     </div>
 
