edit paths in navbar

--- a/subjects/as500/as500.html
+++ b/subjects/as500/as500.html
@@ -55,7 +55,7 @@
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="#">AS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">DB500</a></li>
+                            <li><a class="dropdown-item" href="../db500/db500.html">DB500</a></li>
 
                         </ul>
                     </li>
