--- a/subjects/as500/lectures/asLec2.html
+++ b/subjects/as500/lectures/asLec2.html
@@ -56,12 +56,13 @@
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="../as500.html">AS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">DB500</a></li>
+                            <li><a class="dropdown-item" href="../../db500/db500.html">DB500</a></li>
 
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="../../index.html#diploma_schedule">Diploma
+                        <a class="nav-link p-lg-3" aria-current="page"
+                            href="../../../index.html#diploma_schedule">Diploma
                             Schedule</a>
                     </li>
 
