--- a/subjects/cs500/cs500.html
+++ b/subjects/cs500/cs500.html
@@ -56,7 +56,7 @@
                             <hr class="dropdown-divider">
                             <li><a class="dropdown-item" href="../as500/as500.html">AS500</a></li>
                             <hr class="dropdown-divider">
-                            <li><a class="dropdown-item" href="#">DB500</a></li>
+                            <li><a class="dropdown-item" href="../db500/db500.html">DB500</a></li>
 
                         </ul>
                     </li>
