--- a/subjects/db500/lectures/dbLec3.html
+++ b/subjects/db500/lectures/dbLec3.html
@@ -61,9 +61,9 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-lg-3" aria-current="page" href="../../index.html#diploma_schedule">
-                            Diploma Schedule
-                        </a>
+                        <a class="nav-link p-lg-3" aria-current="page"
+                            href="../../../index.html#diploma_schedule">Diploma
+                            Schedule</a>
                     </li>
 
                     <li class="nav-item">
