--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ======== -->
+
+    <meta property="og:site_name" content="FGSSR - Material">
+    <meta property="og:title" content="All first term material">
+    <!-- <meta property="og:description" content="Just 1 time application"> -->
+    <!-- <meta property="og:image" itemprop="image" content=""> -->
+
+    <meta property="og:type" content="website" />
+    <meta property="og:image:type" content="image/png">
+    <!-- ======== -->
     <link rel="shourtcut icon" type="x-icon" href="imgs/FGSSR-LOGO.png">
 
     <!-- Google Fonts  -->
