add website image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta property="og:site_name" content="FGSSR - Material">
     <meta property="og:title" content="All first term material">
     <!-- <meta property="og:description" content="Just 1 time application"> -->
-    <!-- <meta property="og:image" itemprop="image" content=""> -->
+    <meta property="og:image" itemprop="image"
+        content="https://abdallahhesham99.github.io/FGSSR-Material/imgs/FGSSR-LOGO.png">
 
     <meta property="og:type" content="website" />
     <meta property="og:image:type" content="image/png">
