--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta property="og:site_name" content="FGSSR - Material">
     <meta property="og:title" content="All first term material">
-   
+    <meta property="og:description" content="Computer Science Diploma - Cairo University">
     <meta property="og:image" itemprop="image"
         content="https://abdallahhesham99.github.io/FGSSR-Material/imgs/FGSSR-LOGO.png">
 
