change table color

--- a/index.html
+++ b/index.html
@@ -97,38 +97,38 @@
         <h2 class="section-title">Diploma Schedule</h2>
         <div class="container pt-5">
             <div class="table-responsive">
-                <table class="table">
+                <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th scope="col">من 7 الي 10</th>
+                            <th scope=" col">من 7 الي 10</th>
                             <th scope="col">من 4 الي 7</th>
                             <th scope="col">اليوم</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="table-primary">
+                        <tr>
                             <td>MS500</td>
                             <td>----</td>
                             <th scope="row">الأحد</th>
                         </tr>
-                        <tr class="table-success">
+                        <tr>
                             <td>DB500</td>
                             <td>AS500</td>
                             <th scope="row">الأثنين</th>
                         </tr>
 
 
-                        <tr class="table-secondary">
+                        <tr>
                             <td>---</td>
                             <td>---</td>
                             <th scope="row">الثلاثاء</th>
                         </tr>
-                        <tr class="table-danger">
+                        <tr>
                             <td>CS500 Section</td>
                             <td>OR500</td>
                             <th scope="row">الأربعاء</th>
                         </tr>
-                        <tr class="table-warning">
+                        <tr>
                             <td>CS500</td>
                             <td>---</td>
                             <th scope="row">الخميس</th>
