add footer and commented important links

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                         <a class="nav-link p-lg-3" aria-current="page" href="#diploma_schedule">Diploma Schedule</a>
                     </li>
 
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link p-lg-3" href="#">Important Links</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -140,6 +140,14 @@
 
         </div>
     </section>
+    <footer class="footer mt-5 py-5">
+        <div class="container">
+            <div class="d-flex justify-content-center align-items-center">
+                <img class="img-fluid" src="imgs/FGSSR-LOGO.png" alt="">
+            </div>
+        </div>
+
+    </footer>
     <!-- End Diploma Schedule -->
 
     <!-- Bootstrap JS -->
