--- a/subjects/as500/lectures/asLec6.html
+++ b/subjects/as500/lectures/asLec6.html
@@ -65,9 +65,9 @@
                             Schedule</a>
                     </li>
 
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link p-lg-3" href="#">Important Links</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -103,7 +103,14 @@
             </div> -->
         </div>
     </section>
+    <footer class="footer mt-5 py-5">
+        <div class="container">
+            <div class="d-flex justify-content-center align-items-center">
+                <img class="img-fluid" src="../../../imgs/FGSSR-LOGO.png" alt="">
+            </div>
+        </div>
 
+    </footer>
     <!-- Bootstrap JS -->
     <script src="../../../js/bootstrap.bundle.min.js"></script>
     <!-- Font Awesome  -->
