--- a/subjects/db500/lectures/dbLec1.html
+++ b/subjects/db500/lectures/dbLec1.html
@@ -66,9 +66,9 @@
                             Schedule</a>
                     </li>
 
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link p-lg-3" href="#">Important Links</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -100,17 +100,19 @@
 
                         <iframe src="https://drive.google.com/file/d/1dwYww450AomJgj7ot6q4Nrb8b4ixf1NR/preview"
                             width="640" height="480" allow="autoplay" allowfullscreen></iframe>
-
-
-
-
-
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer class="footer mt-5 py-5">
+        <div class="container">
+            <div class="d-flex justify-content-center align-items-center">
+                <img class="img-fluid" src="../../../imgs/FGSSR-LOGO.png" alt="">
+            </div>
+        </div>
 
+    </footer>
     <!-- Bootstrap JS -->
     <script src="../../../js/bootstrap.bundle.min.js"></script>
     <!-- Font Awesome  -->
