--- a/subjects/ms500/lectures/msLec1.html
+++ b/subjects/ms500/lectures/msLec1.html
@@ -65,10 +65,10 @@
                             href="../../../index.html#diploma_schedule">Diploma
                             Schedule</a>
                     </li>
-
+<!-- 
                     <li class="nav-item">
                         <a class="nav-link p-lg-3" href="#">Important Links</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -102,18 +102,19 @@
                         <iframe src="https://drive.google.com/file/d/1ruq00arBdUmbqRP98IhKJFDjn93tPOFD/preview"
                             width="740" height="480" allow="autoplay" allowfullscreen></iframe>
 
-
                     </div>
-
-
-
-
-
                 </div>
             </div>
         </div>
     </section>
+    <footer class="footer mt-5 py-5">
+        <div class="container">
+            <div class="d-flex justify-content-center align-items-center">
+                <img class="img-fluid" src="../../../imgs/FGSSR-LOGO.png" alt="">
+            </div>
+        </div>
 
+    </footer>
     <!-- Bootstrap JS -->
     <script src="../../../js/bootstrap.bundle.min.js"></script>
     <!-- Font Awesome  -->
