add lec 7 ms500

--- a/subjects/ms500/ms500.html
+++ b/subjects/ms500/ms500.html
@@ -119,6 +119,18 @@
                             </a>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-6">
+                            <a href="lectures/msLec7.html">
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 7</button>
+                            </a>
+                        </div>
+                        <!-- <div class="col-sm-12 col-lg-6">
+                            <a href="lectures/msLec8.html">
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">Lecture 8</button>
+                            </a>
+                        </div> -->
+                    </div>
 
 
 
