--- a/subjects/cs500/sections/csSec6.html
+++ b/subjects/cs500/sections/csSec6.html
@@ -84,23 +84,27 @@
             <div class="container">
                 <div class="cs500-content pt-4">
                     <h2>PDF</h2>
-                    <a href="" target="_blank">
+                    <a href="https://drive.google.com/file/d/1okFnL8ynzczgWYTZBkDOwPjBTo8GvTc8/view?usp=share_link"
+                        target="_blank">
                         <button type="button" class="btn btn-danger py-3">
                             Section 6 PDF
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://drive.google.com/file/d/11j-_uJxv4kdb-GsRobjuC7_xPqAhS8qc/view?usp=share_link"
+                        target="_blank">
                         <button type="button" class="btn btn-danger py-3 m-3">
-                            Section 4 Handwritten
+                            Section 6 Handwritten
                             <i class="fa-solid fa-arrow-down-long fa-bounce"></i>
                         </button>
                     </a>
                     <div class="row my-5">
                         <h2>Video</h2>
-
-
-
+                        
+                        <iframe width="1349" height="480" src="https://www.youtube.com/embed/cwaEK68-j74"
+                            title="Sec5 Floating Point Representation IEEE (2-12-2021)" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
 
                     </div>
                 </div>
