add new lectures btns

--- a/subjects/cs500/cs500.html
+++ b/subjects/cs500/cs500.html
@@ -199,17 +199,17 @@
                             </a>
                         </div>
                     </div>
-                    <!-- <div class="row">
+                    <div class="row">
                         <div class="col-sm-12 col-lg-6">
                             <a href="sections/csSec6.html">
                                 <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
-                                    Section 1
+                                    Section 6
                                     <br>
-
+                                    Floating Point IEEE
                                 </button>
                             </a>
                         </div>
-                        <div class="col-sm-12 col-lg-6">
+                        <!-- <div class="col-sm-12 col-lg-6">
                             <a href="sections/csSec7.html">
                                 <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
                                     Section 1
@@ -217,9 +217,9 @@
 
                                 </button>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
- -->
+
 
 
 
