or500 add lec 6 button

--- a/subjects/or500/or500.html
+++ b/subjects/or500/or500.html
@@ -63,7 +63,7 @@
                         <a class="nav-link p-lg-3" aria-current="page" href="../../index.html#diploma_schedule">Diploma
                             Schedule</a>
                     </li>
-<!-- 
+                    <!-- 
                     <li class="nav-item">
                         <a class="nav-link p-lg-3" href="#">Important Links</a>
                     </li> -->
@@ -127,6 +127,13 @@
                                     Lecture 5
                                     <br>
                                     Simplex
+                                </button>
+                            </a>
+                            <a href="lectures/orLec6.html">
+                                <button type="button" class="btn w-100 py-3 mt-3 customBtnColor">
+                                    Lecture 6
+                                    <br>
+                                    Assignment Problem
                                 </button>
                             </a>
                         </div>
